2019-12-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gradient.c (GradientImage): OpenMP portability requires
	that loop variable be signed.

2019-12-30  Fojtik Jaroslav  <JaFojtik@seznam.cz>
	
	* magick/gradient.c: Visual studio does not compile file without
	this fix.

2019-12-30  Fojtik Jaroslav  <JaFojtik@seznam.cz>

	* VisualMagick\configure\configure.cpp Add option for speed optimisation
	to achieve better performance.

2019-12-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/version.h.in: Bump copyright years.

	* magick/image.c (DisplayImages): Fix return status.  Was
	returning inverted return status.

	* coders/gradient.c (ReadGRADIENTImage): Support the
	"gradient:direction" definition to produce produce additional
	gradient vector directions corresponding to South, North, West,
	East, NorthWest, NorthEast, SouthWest, and SouthEast.  This
	support is similar to a useful feature added in ImageMagick
	6.9.2.5 although there is no claim that the results are identical,
	even if the resulting images appear to be visually
	indistinguishable.

	* magick/gradient.c (GradientImage): Add support for using the
	image 'gravity' attribute to produce additional gradient vector
	directions corresponding to SouthGravity (the previously-existing
	default), NorthGravity, WestGravity, EastGravity,
	NorthWestGravity, NorthEastGravity, SouthWestGravity, and
	SouthEastGravity.  Gradient images are updated to be PseudoClass
	(color-mapped), if possible.

2019-12-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gradient.c (GradientImage): Output PseudoClass images if
	we can.

	* coders/pcx.c (WritePCXImage): Fix heap overflow in PCX writer
	when bytes per line value overflows its 16-bit storage unit.
	Fixes SourceForge bug #619 "heap-buffer-overflow in WritePCXImage"
	reported by Suhwan Song.

	* magick/gradient.c (GradientImage): Gradient levels were still
	not spot-on.  Now they are.  Unfortunately, this necessitated