@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020191230"
-#define public MagickPackageReleaseDate "snapshot-20191230"
+#define public MagickPackageVersionAddendum ".020191231"
+#define public MagickPackageReleaseDate "snapshot-20191231"
