@@ -1,10 +1,16 @@
+2019-12-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* coders/gradient.c (ReadGRADIENTImage): QueryColorDatabase() only
+	throws a warning so allow the warning to propagate to the user
+	rather than failing to report a useful message at all.
+
 2019-12-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* magick/gradient.c (GradientImage): OpenMP portability requires
 	that loop variable be signed.
 
 2019-12-30  Fojtik Jaroslav  <JaFojtik@seznam.cz>
-	
+
 	* magick/gradient.c: Visual studio does not compile file without
 	this fix.
 
